--- a/src/main/resources/templates/fragments/contacto/contactoshow.html
+++ b/src/main/resources/templates/fragments/contacto/contactoshow.html
@@ -97,7 +97,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Dirección:</label>
+                            <label class="col-sm-5 control-label">Dirección de Contacto:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${contacto.direccion}">Fecha de Nacimiento</p>
                             </div>
@@ -111,19 +111,19 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div> 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Telefono Fijo:</label>
+                            <label class="col-sm-7 control-label">Telefono Fijo de Contacto:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${contacto.telefonofijocontacto}">Telefono Movil de Empleado</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Telefono Móvil:</label>
+                            <label class="col-sm-7 control-label">Telefono Móvil de Contacto:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${contacto.telefonomovilcontacto}">DUI</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Email:</label>
+                            <label class="col-sm-7 control-label">Email de Contacto:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${contacto.emailcontacto}">Email Empleado</p>
                             </div>
