--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
@@ -121,9 +121,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </div>
                      <div class="form-group">
                 <label class="col-sm-3 control-label">Tipo de Discapacidad(*):</label>
-                <div class="col-sm-4">
+                <div class="col-sm-5">
                     <select class="form-control" name="tipodiscapacidad"  >
                             <!--th:field="*{sexocontacto}" >-->
+                        <option value="0">--seleccione el tipo de Discapacidad--</option>
                         <option>Mental</option>
                         <option>Fisica</option>
                     </select>
