--- a/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
@@ -58,6 +58,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="col-sm-7" >
                             <br>
                             <select class="form-control"  th:field="*{codigobeneficio}" >
+                                 <option value="0">--seleccione el beneficio a asignar--</option>
                                 <option th:each="c:${beneficios}" th:value="${c.codigobeneficio}" th:text="${c.nombrebeneficio}"></option>
                             </select>
                         </div>
