--- a/src/main/resources/templates/fragments/contacto/contactos.html
+++ b/src/main/resources/templates/fragments/contacto/contactos.html
@@ -19,10 +19,10 @@
         <table class="table table-striped">
             <tr >
                 <th>Código de Contacto</th>
-                <th>Nombre de  Contacto</th>
-                <th>Dirección</th>
-                <th>Telefono Fijo</th>
-                <th>Telefono Móvil</th>
+                <th>Nombre de Contacto</th>
+                <th>Dirección de Contacto </th>
+                <th>Telefono Fijo de Contacto</th>
+                <th>Telefono Móvil de Contacto</th>
                 <th>Email</th>
             </tr>
             <tr th:each="empleado : ${empleados}">
