--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -35,13 +35,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                 <p class="form-control-static" th:text="${empleado.codigoempleado}">codigo de Empleado</p></div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre de Empleado</label>
+                            <label class="col-sm-5 control-label">Nombre del Empleado</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${empleado.nombreempleado}">Nombre de Empleado</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Apellido de Empleado:</label>
+                            <label class="col-sm-5 control-label">Apellido del Empleado:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${empleado.apellidoempleado}">Apellido de Empleado</p>
                             </div>
@@ -266,10 +266,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<tr >
 															<th>Codigo</th>
 															<th>Nombre de  Contacto</th>
-															<th>Direccion</th>
-															<th>Telefono Fijo</th>
-															<th>Telefono Movi</th>
-															<th>Email</th>
+															<th>Direccion de Contacto</th>
+															<th>Telefono Fijo de Contacto</th>
+															<th>Telefono Movil de Contacto</th>
+															<th>Email de Contacto</th>
 															<th></th>
 															<th></th>
 															<th></th>
@@ -390,7 +390,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<th>Estudios Realizados</th>
 															<th>Centro Educativo</th>
 															<th>Titulo Obtenido</th>
-															<th>Fecha</th>
+															<th>Fecha Desde</th>
 															<th></th>
 															<th></th>
 															<th></th>
@@ -450,10 +450,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<thead>
 															<tr >
 															<th>Codigo</th>
-															<th>Estudios Realizados</th>
-															<th>Centro Educativo</th>
-															<th>Titulo Obtenido</th>
-															<th>Fecha</th>
+															<th>Tipo Evento</th>
+															<th>Especialidad del Evento</th>
+															<th>Organismo Patrocinador</th>
+															<th>Fecha del Evento</th>
 															<th></th>
 															<th></th>
 															<th></th>
@@ -636,8 +636,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<thead>
 															<tr >
 															<th>Codigo</th>
-															<th>Fecha de Inicio</th>
-															<th>Fecha de Fin</th>
+															<th>Fecha de Inicio de Contrato</th>
+                                                                                                                        <th>Fecha de Fin de Contrato</th>
 															<th>Salario</th>
 															<th></th>
 															<th></th>
